--- a/.github/actions/javascript/postTestBuildComment/action.yml
+++ b/.github/actions/javascript/postTestBuildComment/action.yml
@@ -4,11 +4,11 @@ inputs:
     REPO:
         description: "Repository to place a comment. Can be App or Mobile-Expensify"
         default: App
-    PR_NUMBER:
-        description: "Pull request number"
+    APP_PR_NUMBER:
+        description: "Pull request number for Expensify/App repository"
         required: true
-    HYBRID_APP_PR_NUMBER:
-        description: "Pull request number for the hybrid app"
+    MOBILE_EXPENSIFY_PR_NUMBER:
+        description: "Pull request number for Expensify/Mobile-Expensify repository"
         required: false
     GITHUB_TOKEN:
         description: "Github token for authentication"
