--- a/.github/workflows/testBuild.yml
+++ b/.github/workflows/testBuild.yml
@@ -3,12 +3,12 @@ name: Build and deploy apps for testing
 on:
   workflow_dispatch:
     inputs:
-      PULL_REQUEST_NUMBER:
-        description: App PR number for correct placement of apps
+      APP_PULL_REQUEST_NUMBER:
+        description: Expensify/App PR number for correct placement of apps
         required: true
       # Pull Request number from Mobile-Expensify repo for correct placement of OD app. It will take precedence over MOBILE-EXPENSIFY from App's PR description if both are specified. If nothing is specified defaults to Mobile-Expensify's main
-      HYBRIDAPP_PULL_REQUEST_NUMBER:
-        description: Mobile-Expensify PR number. Defaults to main. Overrides MOBILE-EXPENSIFY set in App's PR description.
+      MOBILE_EXPENSIFY_PULL_REQUEST_NUMBER:
+        description: Expensify/Mobile-Expensify PR number. Defaults to main. Overrides MOBILE-EXPENSIFY set in App's PR description.
         required: false
         default: ''
       REVIEWED_CODE:
@@ -35,13 +35,13 @@ on:
 
 env:
   # This variable is needed for fastlane to construct correct path
-  PULL_REQUEST_NUMBER: ${{ inputs.PULL_REQUEST_NUMBER }}
+  APP_PULL_REQUEST_NUMBER: ${{ inputs.APP_PULL_REQUEST_NUMBER }}
 
 jobs:
   prep:
     runs-on: ubuntu-latest
     outputs:
-      REF: ${{ steps.getHeadRef.outputs.REF }}
+      APP_REF: ${{ steps.getHeadRef.outputs.REF }}
     steps:
       - name: Checkout
         # v4
@@ -64,32 +64,32 @@ jobs:
         id: getHeadRef
         run: |
           set -e
-          echo "REF=$(gh pr view ${{ inputs.PULL_REQUEST_NUMBER }} --json headRefOid --jq '.headRefOid')" >> "$GITHUB_OUTPUT"
+          echo "REF=$(gh pr view ${{ inputs.APP_PULL_REQUEST_NUMBER }} --json headRefOid --jq '.headRefOid')" >> "$GITHUB_OUTPUT"
         env:
           GITHUB_TOKEN: ${{ github.token }}
     
-  getOldDotPR:
+  getMobileExpensifyPR:
     runs-on: ubuntu-latest
     needs: [prep]
     outputs:
-      OLD_DOT_PR: ${{ steps.old-dot-pr.outputs.result }}
+      MOBILE_EXPENSIFY_PR: ${{ steps.mobileExpensifyPR.outputs.result }}
     steps:
-      - name: Check if author specifed Old Dot PR
-        id: old-dot-pr
+      - name: Check if author specifed Expensify/Mobile-Expensify PR
+        id: mobileExpensifyPR
         # v7
         uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea
         with:
           github-token: ${{ github.token }}
           result-encoding: string
           script: |
-            if ('${{ inputs.HYBRIDAPP_PULL_REQUEST_NUMBER}}') return '${{ inputs.HYBRIDAPP_PULL_REQUEST_NUMBER}}';
+            if ('${{ inputs.MOBILE_EXPENSIFY_PULL_REQUEST_NUMBER}}') return '${{ inputs.MOBILE_EXPENSIFY_PULL_REQUEST_NUMBER}}';
 
-            if (!'${{ inputs.PULL_REQUEST_NUMBER }}') return '';
+            if (!'${{ inputs.APP_PULL_REQUEST_NUMBER }}') return '';
 
             const pullRequest = await github.rest.pulls.get({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              pull_number: '${{ inputs.PULL_REQUEST_NUMBER }}',
+              pull_number: '${{ inputs.APP_PULL_REQUEST_NUMBER }}',
             });
             
             const body = pullRequest.data.body;
@@ -98,25 +98,25 @@ jobs:
 
             return found.trim();
 
-  getOldDotRef:
+  getMobileExpensifyRef:
       runs-on: ubuntu-latest
-      needs: [getOldDotPR]
+      needs: [getMobileExpensifyPR]
       outputs:
-        OLD_DOT_REF: ${{ steps.getHeadRef.outputs.REF }}
+        MOBILE_EXPENSIFY_REF: ${{ steps.getHeadRef.outputs.REF }}
       steps:
         - name: Checkout
           # v4
           uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608
 
-        - name: Check if Old Dot pull request number is correct
+        - name: Check if Expensify/Mobile-Expensify pull request number is correct
           id: getHeadRef
           run: |
             set -e
-            if [[ -z "${{ inputs.HYBRIDAPP_PULL_REQUEST_NUMBER }}" && -z "${{ needs.getOldDotPR.outputs.OLD_DOT_PR }}" ]]; then
+            if [[ -z "${{ inputs.MOBILE_EXPENSIFY_PULL_REQUEST_NUMBER }}" && -z "${{ needs.getMobileExpensifyPR.outputs.MOBILE_EXPENSIFY_PR }}" ]]; then
               echo "REF=" >> "$GITHUB_OUTPUT"
             else
-              echo "PR=${{ inputs.HYBRIDAPP_PULL_REQUEST_NUMBER || needs.getOldDotPR.outputs.OLD_DOT_PR }}" >> "$GITHUB_OUTPUT"
-              echo "REF=$(gh pr view ${{ inputs.HYBRIDAPP_PULL_REQUEST_NUMBER || needs.getOldDotPR.outputs.OLD_DOT_PR }} -R Expensify/Mobile-Expensify --json headRefOid --jq '.headRefOid')" >> "$GITHUB_OUTPUT"
+              echo "PR=${{ inputs.MOBILE_EXPENSIFY_PULL_REQUEST_NUMBER || needs.getMobileExpensifyPR.outputs.MOBILE_EXPENSIFY_PR }}" >> "$GITHUB_OUTPUT"
+              echo "REF=$(gh pr view ${{ inputs.MOBILE_EXPENSIFY_PULL_REQUEST_NUMBER || needs.getMobileExpensifyPR.outputs.MOBILE_EXPENSIFY_PR }} -R Expensify/Mobile-Expensify --json headRefOid --jq '.headRefOid')" >> "$GITHUB_OUTPUT"
             fi
           env:
             GITHUB_TOKEN: ${{ secrets.OS_BOTIFY_TOKEN }}
@@ -124,11 +124,11 @@ jobs:
   postGitHubCommentBuildStarted:
     name: Post build started comment
     uses: ./.github/workflows/postBuildStartedComment.yml
-    needs: [prep, getOldDotPR, getOldDotRef]
+    needs: [prep, getMobileExpensifyPR, getMobileExpensifyRef]
     secrets: inherit
     with:
-      APP_PULL_REQUEST_NUMBER: ${{ github.event.number || inputs.PULL_REQUEST_NUMBER }}
-      HYBRIDAPP_PULL_REQUEST_NUMBER: ${{ inputs.HYBRIDAPP_PULL_REQUEST_NUMBER }}
+      APP_PULL_REQUEST_NUMBER: ${{ github.event.number || inputs.APP_PULL_REQUEST_NUMBER }}
+      MOBILE_EXPENSIFY_PULL_REQUEST_NUMBER: ${{ inputs.MOBILE_EXPENSIFY_PULL_REQUEST_NUMBER }}
 
   desktop:
     name: Build and deploy Desktop for testing
@@ -140,13 +140,13 @@ jobs:
         # v4
         uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608
         with:
-          ref: ${{ needs.prep.outputs.REF }}
+          ref: ${{ needs.prep.outputs.APP_REF }}
 
-      - name: Create .env.adhoc file based on staging and add PULL_REQUEST_NUMBER env to it
+      - name: Create .env.adhoc file based on staging and add APP_PULL_REQUEST_NUMBER env to it
         run: |
           cp .env.staging .env.adhoc
           sed -i '' 's/ENVIRONMENT=staging/ENVIRONMENT=adhoc/' .env.adhoc
-          echo "PULL_REQUEST_NUMBER=$PULL_REQUEST_NUMBER" >> .env.adhoc
+          echo "APP_PULL_REQUEST_NUMBER=$APP_PULL_REQUEST_NUMBER" >> .env.adhoc
 
       - name: Setup Node
         uses: ./.github/actions/composite/setupNode
@@ -194,13 +194,13 @@ jobs:
         # v4
         uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608
         with:
-          ref: ${{ needs.prep.outputs.REF }}
+          ref: ${{ needs.prep.outputs.APP_REF }}
 
-      - name: Create .env.adhoc file based on staging and add PULL_REQUEST_NUMBER env to it
+      - name: Create .env.adhoc file based on staging and add APP_PULL_REQUEST_NUMBER env to it
         run: |
           cp .env.staging .env.adhoc
           sed -i 's/ENVIRONMENT=staging/ENVIRONMENT=adhoc/' .env.adhoc
-          echo "PULL_REQUEST_NUMBER=$PULL_REQUEST_NUMBER" >> .env.adhoc
+          echo "APP_PULL_REQUEST_NUMBER=$APP_PULL_REQUEST_NUMBER" >> .env.adhoc
 
       - name: Setup Node
         uses: ./.github/actions/composite/setupNode
@@ -217,12 +217,12 @@ jobs:
         run: npm run build-adhoc
 
       - name: Deploy to S3 for internal testing
-        run: aws s3 cp --recursive --acl public-read "$GITHUB_WORKSPACE"/dist s3://ad-hoc-expensify-cash/web/"$PULL_REQUEST_NUMBER"
+        run: aws s3 cp --recursive --acl public-read "$GITHUB_WORKSPACE"/dist s3://ad-hoc-expensify-cash/web/"$APP_PULL_REQUEST_NUMBER"
 
   androidHybrid:
     name: Build Android HybridApp
     if: ${{ inputs.ANDROID }}
-    needs: [prep, getOldDotPR, getOldDotRef]
+    needs: [prep, getMobileExpensifyPR, getMobileExpensifyRef]
     runs-on: ubuntu-latest-xl
     outputs:
       S3_APK_PATH: ${{ steps.exportAndroidS3Path.outputs.S3_APK_PATH }}
@@ -232,16 +232,16 @@ jobs:
         uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608
         with:
           submodules: true
-          ref: ${{ needs.prep.outputs.REF || 'main' }}
+          ref: ${{ needs.prep.outputs.APP_REF || 'main' }}
           token: ${{ secrets.OS_BOTIFY_TOKEN }}
 
-      - name: Checkout Old Dot to author specified branch or commit
-        if: ${{ needs.getOldDotRef.outputs.OLD_DOT_REF != '' }}
+      - name: Checkout Mobile-Expensify to specified branch or commit
+        if: ${{ needs.getMobileExpensifyRef.outputs.MOBILE_EXPENSIFY_REF != '' }}
         run: |
           cd Mobile-Expensify
-          git fetch origin ${{ needs.getOldDotRef.outputs.OLD_DOT_REF }}
-          git checkout ${{ needs.getOldDotRef.outputs.OLD_DOT_REF }}
-          echo "Building from https://github.com/Expensify/Mobile-Expensify/pull/${{ needs.getOldDotPR.outputs.OLD_DOT_PR }}"
+          git fetch origin ${{ needs.getMobileExpensifyRef.outputs.MOBILE_EXPENSIFY_REF }}
+          git checkout ${{ needs.getMobileExpensifyRef.outputs.MOBILE_EXPENSIFY_REF }}
+          echo "Building from https://github.com/Expensify/Mobile-Expensify/pull/${{ needs.getMobileExpensifyPR.outputs.MOBILE_EXPENSIFY_PR }}"
 
       - name: Configure MapBox SDK
         run: ./scripts/setup-mapbox-sdk.sh ${{ secrets.MAPBOX_SDK_DOWNLOAD_TOKEN }}
@@ -261,7 +261,7 @@ jobs:
         run: |
             cp .env.staging .env.adhoc
             sed -i 's/ENVIRONMENT=staging/ENVIRONMENT=adhoc/' .env.adhoc
-            echo "PULL_REQUEST_NUMBER=${{ inputs.PULL_REQUEST_NUMBER }}" >> .env.adhoc
+            echo "APP_PULL_REQUEST_NUMBER=${{ inputs.APP_PULL_REQUEST_NUMBER }}" >> .env.adhoc
 
       - name: Setup Java
         # v4
@@ -335,7 +335,7 @@ jobs:
   iosHybrid:
     name: Build and deploy iOS for testing
     if: ${{ inputs.IOS }}
-    needs: [prep, getOldDotPR, getOldDotRef]
+    needs: [prep, getMobileExpensifyPR, getMobileExpensifyRef]
     env:
       DEVELOPER_DIR: /Applications/Xcode_16.2.0.app/Contents/Developer
     runs-on: macos-15-xlarge
@@ -347,16 +347,16 @@ jobs:
         uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608
         with:
           submodules: true
-          ref: ${{ needs.prep.outputs.REF || 'main'}}
+          ref: ${{ needs.prep.outputs.APP_REF || 'main'}}
           token: ${{ secrets.OS_BOTIFY_TOKEN }}
 
-      - name: Checkout Old Dot to author specified branch or commit
-        if: ${{ needs.getOldDotRef.outputs.OLD_DOT_REF != '' }}
+      - name: Checkout Mobile-Expensify to specified branch or commit
+        if: ${{ needs.getMobileExpensifyRef.outputs.MOBILE_EXPENSIFY_REF != '' }}
         run: |
           cd Mobile-Expensify
-          git fetch origin ${{ needs.getOldDotRef.outputs.OLD_DOT_REF }}
-          git checkout ${{ needs.getOldDotRef.outputs.OLD_DOT_REF }}
-          echo "Building from https://github.com/Expensify/Mobile-Expensify/pull/${{ needs.getOldDotPR.outputs.OLD_DOT_PR }}"
+          git fetch origin ${{ needs.getMobileExpensifyRef.outputs.MOBILE_EXPENSIFY_REF }}
+          git checkout ${{ needs.getMobileExpensifyRef.outputs.MOBILE_EXPENSIFY_REF }}
+          echo "Building from https://github.com/Expensify/Mobile-Expensify/pull/${{ needs.getMobileExpensifyPR.outputs.MOBILE_EXPENSIFY_PR }}"
 
       - name: Configure MapBox SDK
         run: ./scripts/setup-mapbox-sdk.sh ${{ secrets.MAPBOX_SDK_DOWNLOAD_TOKEN }}
@@ -367,11 +367,11 @@ jobs:
         with:
           IS_HYBRID_BUILD: 'true'
 
-      - name: Create .env.adhoc file based on staging and add PULL_REQUEST_NUMBER env to it
+      - name: Create .env.adhoc file based on staging and add APP_PULL_REQUEST_NUMBER env to it
         run: |
           cp .env.staging .env.adhoc
           sed -i '' 's/ENVIRONMENT=staging/ENVIRONMENT=adhoc/' .env.adhoc
-          echo "PULL_REQUEST_NUMBER=${{ inputs.PULL_REQUEST_NUMBER }}" >> .env.adhoc
+          echo "APP_PULL_REQUEST_NUMBER=${{ inputs.APP_PULL_REQUEST_NUMBER }}" >> .env.adhoc
 
       - name: Setup Ruby
         # v1.229.0
@@ -448,13 +448,13 @@ jobs:
     runs-on: ubuntu-latest
     if: always()
     name: Post a GitHub comment with app download links for testing
-    needs: [prep, getOldDotPR, desktop, web, androidHybrid, iosHybrid]
+    needs: [prep, getMobileExpensifyPR, desktop, web, androidHybrid, iosHybrid]
     steps:
       - name: Checkout
         # v4
         uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608
         with:
-          ref: ${{ needs.prep.outputs.REF }}
+          ref: ${{ needs.prep.outputs.APP_REF }}
 
       - name: Download Artifact
         # v4
@@ -463,14 +463,14 @@ jobs:
       - name: Publish links to apps for download
         uses: ./.github/actions/javascript/postTestBuildComment
         with:
-          PR_NUMBER: ${{ inputs.PULL_REQUEST_NUMBER }}
-          HYBRID_APP_PR_NUMBER: ${{ needs.getOldDotPR.outputs.OLD_DOT_PR }}
+          APP_PR_NUMBER: ${{ inputs.APP_PULL_REQUEST_NUMBER }}
+          MOBILE_EXPENSIFY_PR_NUMBER: ${{ needs.getMobileExpensifyPR.outputs.MOBILE_EXPENSIFY_PR }}
           GITHUB_TOKEN: ${{ github.token }}
           ANDROID: ${{ needs.androidHybrid.result }}
           DESKTOP: ${{ needs.desktop.result }}
           IOS: ${{ needs.iosHybrid.result }}
           WEB: ${{ needs.web.result }}
           ANDROID_LINK: ${{ needs.androidHybrid.outputs.S3_APK_PATH }}
-          DESKTOP_LINK: https://ad-hoc-expensify-cash.s3.amazonaws.com/desktop/${{ inputs.PULL_REQUEST_NUMBER }}/NewExpensify.dmg
+          DESKTOP_LINK: https://ad-hoc-expensify-cash.s3.amazonaws.com/desktop/${{ inputs.APP_PULL_REQUEST_NUMBER }}/NewExpensify.dmg
           IOS_LINK: ${{ needs.iosHybrid.outputs.IOS_PATH }}
-          WEB_LINK: https://${{ inputs.PULL_REQUEST_NUMBER }}.pr-testing.expensify.com
+          WEB_LINK: https://${{ inputs.APP_PULL_REQUEST_NUMBER }}.pr-testing.expensify.com
