--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,6 +16,9 @@ buildscript {
         // "mapbox" indicates the usage of the Mapbox SDK.
         RNMapboxMapsImpl = "mapbox"
         reactNativeIncludedBuild = gradle.getIncludedBuilds().find { it.name == 'react-native' }
+        // This is our custom extension that we defined in gradleUtils/PatchedArtifactsSettings.gradle
+        // It enables us to use custom artifacts of patched react-native
+        patchedArtifactsConfig = project.gradle.settings.extensions.findByName('patchedArtifacts')
     }
     repositories {
         google()
@@ -52,6 +55,16 @@ allprojects {
         }
     }
     repositories {
+        if (!patchedArtifactsConfig.buildFromSource) {
+            maven {
+                url "https://maven.pkg.github.com/Expensify/App"
+                
+                credentials {
+                    username = patchedArtifactsConfig.githubUsername
+                    password = patchedArtifactsConfig.githubToken
+                }
+            } 
+        }
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url("$rootDir/../node_modules/react-native/android")
