Add final keyword to ANSI escape codes

--- a/gradleUtils/ExpensiLog.gradle
+++ b/gradleUtils/ExpensiLog.gradle
@@ -1,8 +1,8 @@
 ext.ExpensiLog = new Object() {
-    private String BLUE = "\u001B[34m"
-    private String YELLOW = "\u001B[33m"
-    private String RED = "\u001B[31m"
-    private String RESET = "\u001B[0m"
+    private final String BLUE = "\u001B[34m"
+    private final String YELLOW = "\u001B[33m"
+    private final String RED = "\u001B[31m"
+    private final String RESET = "\u001B[0m"
 
     private String prefix = ""
     void setPrefix(String newPrefix) { this.prefix = newPrefix }
