fix: limit android archs on remote builds

--- a/.github/workflows/remote-build-android.yml
+++ b/.github/workflows/remote-build-android.yml
@@ -41,4 +41,5 @@ jobs:
         with:
           variant: ${{ matrix.variant }}
           github-token: ${{ github.token }}
+          rnef-build-extra-params: '-PreactNativeArchitectures=arm64-v8a,x86_64'
           comment-bot: false
