--- a/.github/workflows/finishReleaseCycle.yml
+++ b/.github/workflows/finishReleaseCycle.yml
@@ -76,6 +76,7 @@ jobs:
   # Update the production branch to trigger the production deploy.
   updateProduction:
     needs: validate
+    if: ${{ needs.validate.outputs.isValid == 'true' }}
     uses: ./.github/workflows/updateProtectedBranch.yml
     secrets: inherit
     with:
