--- a/package.json
+++ b/package.json
@@ -238,11 +238,11 @@
     "@react-native/babel-preset": "0.77.1",
     "@react-native/metro-config": "0.77.1",
     "@react-navigation/devtools": "^6.0.10",
-    "@rnef/cli": "^0.7.12",
-    "@rnef/platform-android": "^0.7.12",
-    "@rnef/platform-ios": "^0.7.12",
-    "@rnef/plugin-metro": "^0.7.12",
-    "@rnef/provider-github": "^0.7.12",
+    "@rnef/cli": "0.7.13",
+    "@rnef/platform-android": "0.7.13",
+    "@rnef/platform-ios": "0.7.13",
+    "@rnef/plugin-metro": "0.7.13",
+    "@rnef/provider-github": "0.7.13",
     "@storybook/addon-a11y": "^8.6.9",
     "@storybook/addon-essentials": "^8.6.9",
     "@storybook/addon-webpack5-compiler-babel": "^3.0.5",
