fix: change the checkout action to fetch further
Remove the fetch origin main from the ESLint deprecation warning.
Add the fetch-depth param to checkout.

--- a/.github/workflows/lint-changed.yml
+++ b/.github/workflows/lint-changed.yml
@@ -20,6 +20,8 @@ jobs:
       - name: Checkout
         # v4
         uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608
+        with:
+          fetch-depth: 30000
 
       - name: Setup Node
         uses: ./.github/actions/composite/setupNode
@@ -28,8 +30,5 @@ jobs:
       
       - name: Run ESLint to check for deprecation warnings
         run: |
-          # This will just fetch the latest commit from main
-          git fetch origin main --no-tags --depth=30000
-
           # shellcheck disable=SC2046
           npm run lint-changed
