--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
     "howler": "^2.2.4",
     "htmlparser2": "^7.2.0",
     "idb-keyval": "^6.2.1",
+    "jszip": "^3.10.1",
     "lodash-es": "4.17.21",
     "lottie-react-native": "6.5.1",
     "mapbox-gl": "^2.15.0",
