--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -6,5 +6,5 @@ src/styles/ @Expensify/design @Expensify/pullerbear
 assets/ @Expensify/design @Expensify/pullerbear
 
 # BlameGPT needs to update its parsing logic if issue or PR templates change substantially
-.github/PULL_REQUEST_TEMPLATE.md @rushatgabhane
-.github/ISSUE_TEMPLATE/Standard.md @rushatgabhane
+.github/PULL_REQUEST_TEMPLATE.md @rushatgabhane @Expensify/pullerbear
+.github/ISSUE_TEMPLATE/Standard.md @rushatgabhane @Expensify/pullerbear
