--- a/.github/workflows/lint-changed.yml
+++ b/.github/workflows/lint-changed.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           COMMIT_COUNT="$(gh api repos/"$REPO"/compare/"$BASE"...main \
             --jq '.total_commits')"
-          echo "count=$COMMIT_COUNT" >> "$GITHUB_OUTPUT"
+          echo "count="$COMMIT_COUNT"" >> "$GITHUB_OUTPUT"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BASE: ${{ steps.merge_base.outputs.MERGE_BASE_SHA }}
