--- a/.github/workflows/testBuild.yml
+++ b/.github/workflows/testBuild.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       # If not specified, only build iOS and Android apps from the main branch of Expensify/App
       APP_PULL_REQUEST_NUMBER:
-        description: Expensify/App PR number for correct placement of apps
+        description: Expensify/App PR number for correct placement of apps. Default to main.
         required: false
         default: ''
       # Pull Request number from Mobile-Expensify repo for correct placement of OD app. It will take precedence over MOBILE-EXPENSIFY from App's PR description if both are specified. If nothing is specified defaults to Mobile-Expensify's main
@@ -61,13 +61,6 @@ jobs:
           echo "::error::🕵️‍♀️ Please carefully review the pull request before running a test build to ensure it does not contain any malicious code"
           exit 1
 
-      - name: Check if either App or Mobile-Expensify pull request number is provided
-        if: ${{ inputs.APP_PULL_REQUEST_NUMBER || inputs.MOBILE_EXPENSIFY_PULL_REQUEST_NUMBER }}
-        id: checkPRs
-        run: |
-          echo "::error::🕵️‍♀️ Please provide either App or Mobile-Expensify pull request number"
-          exit 1
-
       - name: Check if App pull request number is correct
         if: ${{ github.event_name == 'workflow_dispatch' }}
         id: getHeadRef
@@ -115,7 +108,7 @@ jobs:
       runs-on: ubuntu-latest
       needs: [getMobileExpensifyPR]
       outputs:
-        MOBILE_EXPENSIFY_REF: ${{ steps.getHeadRef.outputs.REF }}
+        MOBILE_EXPENSIFY_REF: ${{ steps.getHeadRef.outputs.REF || 'main' }}
       steps:
         - name: Checkout
           # v4
@@ -474,7 +467,7 @@ jobs:
         uses: actions/download-artifact@95815c38cf2ff2164869cbab79da8d1f422bc89e
 
       - name: Publish links to apps for download on Expensify/App PR
-        if: ${{ inputs.APP_PULL_REQUEST_NUMBER }}
+        if: ${{ inputs.APP_PULL_REQUEST_NUMBER || (!inputs.APP_PULL_REQUEST_NUMBER && !needs.getMobileExpensifyPR.outputs.MOBILE_EXPENSIFY_PR) }}
         uses: ./.github/actions/javascript/postTestBuildComment
         with:
           REPO: App
