--- a/.github/workflows/lint-changed.yml
+++ b/.github/workflows/lint-changed.yml
@@ -20,25 +20,25 @@ jobs:
       - name: Fetch merge base SHA from API
         id: merge_base
         run: |
-          MERGE_BASE_SHA="$(gh api repos/"$REPO"/compare/"$PR_BASE_SHA"..."$PR_HEAD_SHA" \
+          MERGE_BASE_SHA="$(gh api "repos/$REPO/compare/${PR_BASE_SHA}...${PR_HEAD_SHA}" \
           | jq -r '.merge_base_commit.sha')"
           echo "MERGE_BASE_SHA=$MERGE_BASE_SHA" >> "$GITHUB_OUTPUT"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          REPO: ${{ github.repository	}}
+          REPO: ${{ github.repository }}
           PR_BASE_SHA: ${{ github.event.pull_request.base.sha }}
           PR_HEAD_SHA: ${{ github.event.pull_request.head.sha }}
 
-      - name: Count commits  between merge base and HEAD
+      - name: Count commits between merge base and HEAD
         id: count
         run: |
-          COMMIT_COUNT="$(gh api repos/"$REPO"/compare/"$BASE"...main \
+          COMMIT_COUNT="$(gh api "repos/$REPO/compare/${BASE}...main" \
             --jq '.total_commits')"
           echo "count=$COMMIT_COUNT" >> "$GITHUB_OUTPUT"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BASE: ${{ steps.merge_base.outputs.MERGE_BASE_SHA }}
-          REPO: ${{ github.repository	}}
+          REPO: ${{ github.repository }}
           
       - name: Checkout
         # v4
